--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,10 @@ opencv-python~=4.7.0.72
 pillow~=9.4.0
 numpy~=1.23.5
 torchvision~=0.15.0
+
+
+
+redis~=3.5.3
+websocket~=0.2.1
+
+websocket-client~=0.58.0
